<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/newTaskText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@null"
        android:hint="Unesite novi zadatak"
        android:minHeight="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="VisualLintTextFieldSize" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newTaskButton"
        android:layout_below="@id/newTaskText"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:text="Spremi"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/timePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTaskText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="92dp"
        android:background="@android:color/transparent"
        android:text="Postavi vrijeme"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

</RelativeLayout>
