<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tasksText"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/timetodo"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tasksRecyclerView"
        android:layout_below="@id/tasksText"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:nestedScrollingEnabled="true"/>

    <TextView
        android:id="@+id/todoTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksRecyclerView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@android:color/white"
        android:contentDescription="todo"
        android:src="@drawable/baseline_add" />

</RelativeLayout>
