<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/todoCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tool:text="This is a Sample task inside the application."
            android:paddingStart="8dp"
            android:buttonTint="@android:color/holo_blue_dark"
            tool:ignore="RtlSymmetry,VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/todoCheckbox"
            android:layout_marginTop="8dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/todoDueDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/todoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
